tests/baselines/reference/assignmentCompatBug5.errors.txt
==== tests/cases/compiler/assignmentCompatBug5.ts (8 errors) ====
    function foo1(x: { a: number; }) { }
    foo1({ b: 5 });
    ~~~~
!!! error TS2082: Supplied parameters do not match any signature of call target:
!!! 	Type '{ b: number; }' is missing property 'a' from type '{ a: number; }'.
    ~~~~
!!! error TS2087: Could not select overload for 'call' expression.
    
    function foo2(x: number[]) { }
    foo2(["s", "t"]);
    ~~~~
!!! error TS2082: Supplied parameters do not match any signature of call target:
!!! 	Types of property 'pop' of types '{}[]' and 'number[]' are incompatible:
!!! 		Call signatures of types '() => {}' and '() => number' are incompatible.
    ~~~~
!!! error TS2087: Could not select overload for 'call' expression.
    
    function foo3(x: (n: number) =>number) { };
    foo3((s:string) => { });
    ~~~~
!!! error TS2082: Supplied parameters do not match any signature of call target:
!!! 	Call signatures of types '(s: string) => void' and '(n: number) => number' are incompatible.
    ~~~~
!!! error TS2087: Could not select overload for 'call' expression.
    foo3((n) => { return; });
    ~~~~
!!! error TS2082: Supplied parameters do not match any signature of call target:
!!! 	Call signatures of types '(n: number) => void' and '(n: number) => number' are incompatible.
    ~~~~
!!! error TS2087: Could not select overload for 'call' expression.
    
    